# bevydemo

./: .env.example  .gitignore  Cargo.toml  README.md  Taskfile.yml
app/: Cargo.toml
app/src/: main.rs
assets/config/: levels.json
assets/config/locales/: en.json  es.json  fr.json  ta.json  zh.json
crates/audio_plugin/: Cargo.toml
crates/audio_plugin/src/: audio_plugin.rs  lib.rs
crates/content_runtime/: Cargo.toml
crates/content_runtime/src/: asset_registry.rs  level_loader.rs  lib.rs  locale.rs
crates/core_domain/: Cargo.toml
crates/core_domain/src/: level.rs  lib.rs  math_engine.rs  progression.rs  scoring.rs  tts.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: app_states.rs  events.rs  level_plugin.rs  lib.rs
crates/physics_plugin/: Cargo.toml
crates/physics_plugin/src/: lib.rs  physics_plugin.rs
crates/platform/: Cargo.toml
crates/platform/src/: config.rs  lib.rs  persistence.rs  tts_fallback.rs  tts_web.rs
crates/ui/: Cargo.toml
crates/ui/src/: hud_plugin.rs  lib.rs  menu_plugin.rs  results_plugin.rs
