[workspace]
resolver = "2"
members = [
    "crates/core_domain",
    "crates/content_runtime",
    "crates/gameplay",
    "crates/platform",
    "crates/ui",
    "crates/audio_plugin",
    "crates/physics_plugin",
    "app",
]

[workspace.dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.27", features = ["simd-stable"] }
bevy_kira_audio = "0.20"
bevy_egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
log = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
