[package]
name = "mathquest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mathquest"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
dotenvy = { workspace = true }
core_domain = { path = "../crates/core_domain" }
content_runtime = { path = "../crates/content_runtime" }
gameplay = { path = "../crates/gameplay" }
platform = { path = "../crates/platform" }
ui = { path = "../crates/ui" }
audio_plugin = { path = "../crates/audio_plugin" }
physics_plugin = { path = "../crates/physics_plugin" }
log = { workspace = true }
